Hit a stopping poing. Most the pages are almost complete. Projects page has not been started.

--- a/about.html
+++ b/about.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <title>About</title>
-  </head>
-  <body style="background-color: #FFF2F8;">
-    <!-- HEADER -->
-    <header>
-      <nav class="navbar navbar-light">
-        <a href="index.html"><img src="images/logo.svg" alt="" class="m-2 img-fluid" style="width: 100px;"></a>
-        <!-- NAVIGATION -->
-        <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#!">Contact </a>
-          </li>
-        </ul>
-      </nav>
-      <h1 class="text-center text-uppercase display-1 p-5 m-5">About</h1>
-    </header>
-    <section class="p-3 mt-3 border border-primary rounded container" style="background-color: #FFB7D8">
-      <h2>About</h2>
-      <div class="container">
-        <div class="row">
-          <img src="./images/rollercoaster-small.png" alt="" class="col w-50 img-fluid">
-          <p class="col">As a child in high school, I built my first website. From that moment I wanted to learn more. This lead me to attend Full Sail University and earn my degree in Web Design & Development. I have learned a lot in my time at this school, but there is so much more to learn in this industry. There will always be something new to learn!</p>
-        </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <title>About</title>
+</head>
+<body style="background-color: #FFF2F8;">
+  <!-- HEADER -->
+  <header>
+    <nav class="navbar navbar-light">
+      <a href="index.html"><img src="images/logo.svg" alt="" class="m-2 img-fluid" style="width: 100px;"></a>
+      <!-- NAVIGATION -->
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <h1 class="text-center text-uppercase display-2 p-3">About</h1>
+  </header>
+  <section class="p-3 mt-3 border border-primary rounded container" style="background-color: #FFB7D8">
+    <h2>About</h2>
+    <div class="container">
+      <div class="row">
+        <img src="./images/rollercoaster-small.png" alt="" class="col img-fluid">
+        <p class="col">As a child in high school, I built my first website. From that moment I wanted to learn more. This lead me to attend Full Sail University and earn my degree in Web Design & Development. I have learned a lot in my time at this school, but there is so much more to learn in this industry. There will always be something new to learn!</p>
       </div>
-    </section>
-    <!-- FOOTER -->
-    <footer class="mt-4 navbar sticky-bottom bg-primary">
-      <p class="text-center">poop</p>
-    </footer>
-  </body>
+    </div>
+  </section>
+  <!-- FOOTER -->
+  <footer class="mt-4 navbar sticky-bottom bg-primary">
+    <p class="text-center">Kloe Rogers</p>
+  </footer>
+</body>
 </html>
