--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!">Projects</a>
+          <a class="nav-link" href="projects.html">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#!">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </nav>
-    <h1 class="text-center text-uppercase display-1 p-5 m-5">Hello.</h1>
+    <h1 class="text-center text-uppercase display-2 p-3">Hello.</h1>
   </header>
   <!-- ABOUT AND WHAT I CAN DO -->
   <div class="container">
     <div class="row">
       <!-- ABOUT SECTION -->
-      <section class="p-3 col border border-primary rounded" style="background-color: #FFB7D8;">
+      <section class="p-3 ml-2 col border border-primary rounded" style="background-color: #FFB7D8;">
         <h2>About</h2>
         <div class="container">
           <div class="row">
@@ -41,7 +41,7 @@
         </div>
       </section>
       <!-- WHAT I CAN DO SECTION -->
-      <section class="p-3 ml-3 col border border-primary rounded" style="background-color: #FFB7D8">
+      <section class="p-3 ml-3 mr-2 col border border-primary rounded" style="background-color: #FFB7D8">
         <h2>What I Can Do</h2>
         <ul>
           <li>HTML/CSS</li>
@@ -53,7 +53,8 @@
     </div>
   </div>
   <!-- A FEW PROJECTS -->
-  <section class="p-3 mt-3 border border-primary rounded container" style="background-color: #FFB7D8">
+<div class="container mt-3">
+  <section class="p-3 border border-primary rounded" style="background-color: #FFB7D8">
     <h2>A Few Projects</h2>
     <div class="container">
       <div class="row">
@@ -73,10 +74,11 @@
         </div>
       </div>
     </div>
+</div>
   </section>
   <!-- FOOTER -->
   <footer class="mt-4 navbar sticky-bottom bg-primary">
-    <p class="text-center">poop</p>
+    <p class="text-center">Kloe Rogers</p>
   </footer>
 </body>
 </html>
