Worked on the functionality of my projects page. Almost complete

--- a/index.html
+++ b/index.html
@@ -25,30 +25,34 @@
         </li>
       </ul>
     </nav>
-    <h1 class="text-center text-uppercase display-2 p-3">Hello.</h1>
+    <h1 class="text-center text-uppercase display-2 p-5">Hello.</h1>
   </header>
   <!-- ABOUT AND WHAT I CAN DO -->
   <div class="container">
     <div class="row">
       <!-- ABOUT SECTION -->
-      <section class="p-3 ml-2 col border border-primary rounded" style="background-color: #FFB7D8;">
-        <h2>About</h2>
-        <div class="container">
-          <div class="row">
-            <img src="./images/rollercoaster-small.png" alt="" class="col w-50 img-fluid">
-            <p class="col">As a child in high school, I built my first website. From that moment I wanted to learn more.</p>
+      <section class="col-md-6">
+        <div class="p-3 border border-primary rounded" style="background-color: #FFB7D8;">
+          <h2>About</h2>
+          <div class="container">
+            <div class="row">
+              <img src="./images/rollercoaster-small.png" alt="" class="col-md-6 img-fluid">
+              <p class="col-md-6">As a child in high school, I built my first website. From that moment I wanted to learn more.</p>
+            </div>
           </div>
         </div>
       </section>
       <!-- WHAT I CAN DO SECTION -->
-      <section class="p-3 ml-3 mr-2 col border border-primary rounded" style="background-color: #FFB7D8">
-        <h2>What I Can Do</h2>
-        <ul>
-          <li>HTML/CSS</li>
-          <li>C#</li>
-          <li>JavaScript</li>
-        </ul>
-        <p><a href="#" class="btn btn-primary">View More</a></p>
+      <section class="p-3 col-md-6">
+        <div class="p-3 border border-primary rounded" style="background-color: #FFB7D8;">
+          <h2>What I Can Do</h2>
+          <ul>
+            <li>HTML/CSS</li>
+            <li>C#</li>
+            <li>JavaScript</li>
+          </ul>
+          <p><a href="#" class="btn btn-primary">View More</a></p>
+        </div>
       </section>
     </div>
   </div>
@@ -63,7 +67,7 @@
           <img src="./images/rollercoaster-small.png" alt="" class="img-fluid">
           <h3>Responsive Image Gallery</h3>
           <p>A small image gallery utilizing CSS animations to isplay metadata about the image</p>
-          <p><a href="" class="btn btn-primary">View more about the project</a></p>
+          <p><a id="linkToImageGallery" href="projects.html" class="btn btn-primary">View more about the project</a></p>
         </div>
         <!-- PROJECT 2 -->
         <div class="ml-3 col p-5">
