--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <script src="./js/main.js" defer></script>
     <title>Projects</title>
   </head>
   <body style="background-color: #FFF2F8;">
@@ -28,8 +29,31 @@
           </li>
         </ul>
       </nav>
-      <h1 class="text-center text-uppercase display-2 p-3">Projects</h1>
+      <h1 class="text-center text-uppercase display-3 p-4">Projects</h1>
     </header>
+    <section class="container">
+
+      <div class="row">
+        <div class="col-md-5 mb-3">
+          <div class="p-3 border border-primary rounded" style="background-color: #4BD8BC;">
+            <div class="container">
+              <div class="row">
+                <div id="gauntlet" class="col" style="cursor:pointer">
+                  <img class="img-fluid" src="./images/gauntlet-small_1.png" alt="">
+                </div>
+                <div id="rImageGallery" class="col" style="cursor:pointer">
+                  <img class="img-fluid mt-3" src="./images/rollercoaster-small.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7">
+          <div id="projectDetails" class="p-4 col border border-primary rounded w-100" style="background-color: #FFB7D8;">
+        </div>
+      </div>
+
+    </section>
     <!-- FOOTER -->
     <footer class="mt-4 navbar sticky-bottom bg-primary">
       <p class="text-center">Kloe Rogers</p>
