Worked on the style of the What I can do section along with the footer on each page

--- a/about.html
+++ b/about.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/font-awesome.min.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>About</title>
 </head>
-<body style="background-color: #FFF2F8;">
+<body>
   <!-- HEADER -->
   <header>
     <nav class="navbar navbar-light">
@@ -28,9 +30,9 @@
         </li>
       </ul>
     </nav>
-    <h1 class="text-center text-uppercase display-2 p-5">About</h1>
+    <h1 class="text-center text-uppercase display-2 py-5 my-5">About</h1>
   </header>
-  <section class="p-3 mt-3 border border-primary rounded container" style="background-color: #FFB7D8">
+  <section class="p-3 mt-3 border border-primary rounded container section-color">
     <h2>About</h2>
     <div class="container">
       <div class="row">
@@ -40,8 +42,8 @@
     </div>
   </section>
   <!-- FOOTER -->
-  <footer class="mt-4 navbar sticky-bottom bg-primary">
-    <p class="text-center">Kloe Rogers</p>
+  <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
+      <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
   </footer>
 </body>
 </html>
