--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/font-awesome.min.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Contact</title>
 </head>
-<body style="background-color: #FFF2F8;">
+<body>
   <!-- HEADER -->
   <header>
     <nav class="navbar navbar-light">
@@ -29,11 +30,11 @@
         </li>
       </ul>
     </nav>
-    <h1 class="text-center text-uppercase display-3 p-4">Contact</h1>
+    <h1 class="text-center text-uppercase display-3 py-5 my-5">Contact</h1>
   </header>
   <!-- CONTACT FORM -->
   <section>
-    <form class="p-3 mt-3 border border-primary rounded container" style="background-color: #FFB7D8">
+    <form class="p-3 mt-3 border border-primary rounded container section-color">
       <div class="container">
         <div class="row">
           <div class="form-group col">
@@ -54,7 +55,7 @@
     </form>
   </section>
   <!-- CONTACT INFO -->
-  <section class="p-3 mt-3 border border-primary rounded container" style="background-color: #FFB7D8">
+  <section class="p-3 mt-3 border border-primary rounded container section-color">
     <h2>Contact Information</h2>
     <!-- EMAIL -->
     <div class="container">
@@ -63,16 +64,41 @@
           <h3>Email</h3>
           <p>kloerogers2015@gmail.com</p>
         </div>
-          <div class="col">
+        <div class="col">
           <h3>Social Media</h3>
           <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
   </section>
-  <!-- FOOTER -->
-  <footer class="mt-4 navbar sticky-bottom bg-primary">
-    <p class="text-center">Kloe Rogers</p>
-  </footer>
-</body>
-</html>
+
+
+
+
+  <!-- <div id="wufoo-z1ir9z701ipxo4c">
+    Fill out my <a href="https://krogers78.wufoo.com/forms/z1ir9z701ipxo4c">online form</a>.
+  </div>
+  <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">HTML Forms powered by <a href="http://www.wufoo.com">Wufoo</a>.</div>
+  <script type="text/javascript">var z1ir9z701ipxo4c;(function(d, t) {
+    var s = d.createElement(t), options = {
+      'userName':'krogers78',
+      'formHash':'z1ir9z701ipxo4c',
+      'autoResize':true,
+      'height':'577',
+      'async':true,
+      'host':'wufoo.com',
+      'header':'show',
+      'ssl':true};
+      s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+      s.onload = s.onreadystatechange = function() {
+        var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+        try { z1ir9z701ipxo4c = new WufooForm();z1ir9z701ipxo4c.initialize(options);z1ir9z701ipxo4c.display(); } catch (e) {}};
+        var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+      })(document, 'script');</script> -->
+
+      <!-- FOOTER -->
+      <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
+      <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
+      </footer>
+    </body>
+    </html>
