--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/main.css">
     <script src="./js/main.js" defer></script>
     <title>Projects</title>
   </head>
-  <body style="background-color: #FFF2F8;">
+  <body>
     <!-- HEADER -->
     <header>
       <nav class="navbar navbar-light">
@@ -29,34 +31,34 @@
           </li>
         </ul>
       </nav>
-      <h1 class="text-center text-uppercase display-3 p-4">Projects</h1>
+      <h1 class="text-center text-uppercase display-3 py-5 my-5">Projects</h1>
     </header>
     <section class="container">
 
       <div class="row">
-        <div class="col-md-5 mb-3">
-          <div class="p-3 border border-primary rounded" style="background-color: #4BD8BC;">
+        <div class="col-md-4 mb-3">
+          <div class="p-3 border border-primary rounded action-color">
             <div class="container">
               <div class="row">
                 <div id="gauntlet" class="col" style="cursor:pointer">
                   <img class="img-fluid" src="./images/gauntlet-small_1.png" alt="">
                 </div>
                 <div id="rImageGallery" class="col" style="cursor:pointer">
-                  <img class="img-fluid mt-3" src="./images/rollercoaster-small.png" alt="">
+                  <img class="img-fluid mt-3 w-100" src="./images/rollercoaster-small.png" alt="">
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-7">
-          <div id="projectDetails" class="p-4 col border border-primary rounded w-100" style="background-color: #FFB7D8;">
+        <div class="col-md-8">
+          <div id="projectDetails" class="p-4 col border border-primary rounded w-100 section-color">
         </div>
       </div>
 
     </section>
     <!-- FOOTER -->
-    <footer class="mt-4 navbar sticky-bottom bg-primary">
-      <p class="text-center">Kloe Rogers</p>
+    <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
+      <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
     </footer>
   </body>
 </html>
