Figured out the JavScript needed for the site to function properly

--- a/index.html
+++ b/index.html
@@ -63,32 +63,38 @@
     </div>
   </div>
   <!-- A FEW PROJECTS -->
-<div class="container mt-3">
-  <section class="p-3 border border-primary rounded section-color">
-    <h2>A Few Projects</h2>
-    <div class="container">
-      <div class="row">
-        <!-- PROJECT 1 -->
-        <div class="col p-5">
-          <img src="./images/rollercoaster-small.png" alt="" class="img-fluid">
-          <h3>Responsive Image Gallery</h3>
-          <p>A small image gallery utilizing CSS animations to isplay metadata about the image</p>
-          <p><a id="linkToImageGallery" href="projects.html" class="btn btn-primary">View more about the project</a></p>
-        </div>
-        <!-- PROJECT 2 -->
-        <div class="ml-3 col p-5">
-          <img src="./images/gauntlet-small_1.png" alt="" class="img-fluid">
-          <h3>The Gauntlet</h3>
-          <p>One of my first projects when it comes to web development</p>
-          <p><a id="linkToTheGauntlet" href="projects.html" class="btn btn-primary">View more about the project</a></p>
+  <div class="container mt-3">
+    <section class="p-3 border border-primary rounded section-color">
+      <h2>A Few Projects</h2>
+      <div class="container">
+        <div class="row">
+
+          <!-- PROJECT 1 -->
+          <div class="col p-5">
+            <img src="./images/rollercoaster-small.png" alt="" class="img-fluid">
+            <h3>Responsive Image Gallery</h3>
+            <p>A small image gallery utilizing CSS animations to isplay metadata about the image</p>
+            <p><a id="linkToImageGallery" href="projects.html" class="btn btn-primary">View more about the project</a></p>
+          </div>
+
+<p>&ltHTML /&gt</p>
+
+
+          <!-- PROJECT 2 -->
+          <div class="ml-3 col p-5">
+            <img src="./images/gauntlet-small_1.png" alt="" class="img-fluid">
+            <h3>The Gauntlet</h3>
+            <p>One of my first projects when it comes to web development</p>
+            <p><a id="linkToTheGauntlet" href="projects.html" class="btn btn-primary">View more about the project</a></p>
+          </div>
+
         </div>
       </div>
     </div>
-</div>
   </section>
   <!-- FOOTER -->
   <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
-      <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
+    <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
   </footer>
 </body>
 </html>
