--- a/projects.html
+++ b/projects.html
@@ -51,8 +51,7 @@
           </div>
         </div>
         <div class="col-md-8">
-          <div id="projectDetails" class="p-4 col border border-primary rounded w-100 section-color">
-        </div>
+          <div id="projectDetails" class="p-4 col border border-primary rounded w-100 section-color"></div>
       </div>
 
     </section>
