Changed the skill circles from an SVG to being made with CSS. Hit a stopping point. All information implemented along with form from Wufoo.

--- a/contact.html
+++ b/contact.html
@@ -32,73 +32,57 @@
     </nav>
     <h1 class="text-center text-uppercase display-3 py-5 my-5">Contact</h1>
   </header>
-  <!-- CONTACT FORM -->
-  <section>
-    <form class="p-3 mt-3 border border-primary rounded container section-color">
-      <div class="container">
-        <div class="row">
-          <div class="form-group col">
-            <label for="fname">Full Name</label>
-            <input type="email" class="form-control" id="fname" placeholder="Ex: Jane Doe">
+
+  <div class="container">
+    <div class="row">
+      <!-- CONTACT FORM -->
+      <section class="col-md-12">
+        <div class="p-3 mt-3 border border-primary rounded container section-color">
+          <div id="wufoo-z1ir9z701ipxo4c">
+            Fill out my <a href="https://krogers78.wufoo.com/forms/z1ir9z701ipxo4c">online form</a>.
           </div>
-          <div class="form-group col">
-            <label for="emailInput">Email</label>
-            <input type="text" class="form-control" id="emailInput" placeholder="Ex: janedoe@name.com">
+          <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">HTML Forms powered by <a href="http://www.wufoo.com">Wufoo</a>.</div>
+          <script type="text/javascript">var z1ir9z701ipxo4c;(function(d, t) {
+            var s = d.createElement(t), options = {
+              'userName':'krogers78',
+              'formHash':'z1ir9z701ipxo4c',
+              'autoResize':true,
+              'height':'577',
+              'async':true,
+              'host':'wufoo.com',
+              'header':'show',
+              'ssl':true};
+              s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+              s.onload = s.onreadystatechange = function() {
+                var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+                try { z1ir9z701ipxo4c = new WufooForm();z1ir9z701ipxo4c.initialize(options);z1ir9z701ipxo4c.display(); } catch (e) {}};
+                var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+              })(document, 'script');</script>
+            </div>
+          </section>
+      <!-- CONTACT INFO -->
+      <section class="col-md-12">
+        <div class="p-3 mt-3 border border-primary rounded container section-color">
+          <h2>Contact Information</h2>
+          <!-- EMAIL -->
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <!-- <h3>Email</h3> -->
+                <p><span class="badge badge-dark"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></span> <span style="font-size: 18px">kloerogers2015@gmail.com</span></p>
+              </div>
+              <div class="col">
+                <!-- <h3>Social Media</h3> -->
+                <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="form-group">
-          <label for="theMessage">Message</label>
-          <textarea class="form-control" name="theMessage" id="theMessage" rows="8" cols="80"></textarea>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </section>
-  <!-- CONTACT INFO -->
-  <section class="p-3 mt-3 border border-primary rounded container section-color">
-    <h2>Contact Information</h2>
-    <!-- EMAIL -->
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h3>Email</h3>
-          <p>kloerogers2015@gmail.com</p>
-        </div>
-        <div class="col">
-          <h3>Social Media</h3>
-          <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-        </div>
-      </div>
     </div>
-  </section>
-
-
-
-
-  <!-- <div id="wufoo-z1ir9z701ipxo4c">
-    Fill out my <a href="https://krogers78.wufoo.com/forms/z1ir9z701ipxo4c">online form</a>.
   </div>
-  <div id="wuf-adv" style="font-family:inherit;font-size: small;color:#a7a7a7;text-align:center;display:block;">HTML Forms powered by <a href="http://www.wufoo.com">Wufoo</a>.</div>
-  <script type="text/javascript">var z1ir9z701ipxo4c;(function(d, t) {
-    var s = d.createElement(t), options = {
-      'userName':'krogers78',
-      'formHash':'z1ir9z701ipxo4c',
-      'autoResize':true,
-      'height':'577',
-      'async':true,
-      'host':'wufoo.com',
-      'header':'show',
-      'ssl':true};
-      s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-      s.onload = s.onreadystatechange = function() {
-        var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-        try { z1ir9z701ipxo4c = new WufooForm();z1ir9z701ipxo4c.initialize(options);z1ir9z701ipxo4c.display(); } catch (e) {}};
-        var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-      })(document, 'script');</script> -->
-
-      <!-- FOOTER -->
-      <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
-      <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
-      </footer>
-    </body>
-    </html>
+  <!-- FOOTER -->
+  <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
+    <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
+  </footer>
+</body>
+</html>
