--- a/index.html
+++ b/index.html
@@ -37,25 +37,20 @@
   <div class="container">
     <div class="row">
       <!-- ABOUT SECTION -->
-      <section class="col-md-6">
-        <div class="p-3 border border-primary rounded section-color">
+      <section class="col-md-3">
+        <div class="p-3 mt-3 border border-primary rounded section-color">
           <h2>About</h2>
-          <div class="container">
-            <div class="row">
-              <img src="./images/rollercoaster-small.png" alt="" class="col-md-6 img-fluid">
-              <p class="col-md-6">As a child in high school, I built my first website. From that moment I wanted to learn more.</p>
-            </div>
-          </div>
+              <p>As a child in high school, I built my first website. From that moment I wanted to learn more.</p>
         </div>
       </section>
       <!-- WHAT I CAN DO SECTION -->
-      <section class="p-3 col-md-6">
-        <div class="p-3 border border-primary rounded section-color">
+      <section class="col-md-9">
+        <div class="p-3 mt-3 border border-primary rounded section-color">
           <h2>What I Can Do</h2>
-          <ul class="d-flex flex-row ">
-            <li><img class="skills" src="./images/html.svg" alt=""></li>
-            <li><img class="skills" src="./images/css.svg" alt=""></li>
-            <li><img class="skills" src="./images/javascript.svg" alt=""></li>
+          <ul class="d-flex flex-row flex-wrap">
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">&lthtml /&gt</p></li>
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">.css{}</p></li>
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">JavaScript();</p></li>
           </ul>
           <p><a href="#!" class="btn btn-primary">View More</a></p>
         </div>
@@ -76,9 +71,6 @@
             <p>A small image gallery utilizing CSS animations to isplay metadata about the image</p>
             <p><a id="linkToImageGallery" href="projects.html" class="btn btn-primary">View more about the project</a></p>
           </div>
-
-<p>&ltHTML /&gt</p>
-
 
           <!-- PROJECT 2 -->
           <div class="ml-3 col p-5">
