--- a/about.html
+++ b/about.html
@@ -32,18 +32,36 @@
     </nav>
     <h1 class="text-center text-uppercase display-2 py-5 my-5">About</h1>
   </header>
-  <section class="p-3 mt-3 border border-primary rounded container section-color">
-    <h2>About</h2>
-    <div class="container">
-      <div class="row">
-        <img src="./images/rollercoaster-small.png" alt="" class="col img-fluid">
-        <p class="col">As a child in high school, I built my first website. From that moment I wanted to learn more. This lead me to attend Full Sail University and earn my degree in Web Design & Development. I have learned a lot in my time at this school, but there is so much more to learn in this industry. There will always be something new to learn!</p>
-      </div>
+  <!-- ABOUT SECTION -->
+  <div class="container">
+    <div class="row">
+      <section class="col-md-12">
+        <div class="p-3 mt-3 border border-primary rounded section-color">
+          <h2>About</h2>
+          <p class="col">As a child in high school, I built my first website. From that moment I wanted to learn more. This lead me to attend Full Sail University and earn my degree in Web Design & Development. I have learned a lot in my time at this school, but there is so much more to learn in this industry. There will always be something new to learn!</p>
+        </div>
+
+      </section>
+      <section class="col-md-12">
+        <div class="p-3 mt-3 border border-primary rounded section-color">
+          <h2>What I Can Do</h2>
+          <ul class="d-flex flex-row flex-wrap">
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">&lthtml /&gt</p></li>
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">.css{}</p></li>
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">JavaScript();</p></li>
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">&ltReact /&gt</p></li>
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">.sass{}</p></li>
+            <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">C#</p></li>
+          </ul>
+        </div>
+
+      </section>
     </div>
-  </section>
+  </div>
+
   <!-- FOOTER -->
   <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
-      <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
+    <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
   </footer>
 </body>
 </html>
