Added a link that was missing before

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         </div>
 
       </section>
-      <section class="col-md-12">
+      <section id="sills" class="col-md-12">
         <div class="p-3 mt-3 border border-primary rounded section-color">
           <h2>What I Can Do</h2>
           <ul class="d-flex flex-row flex-wrap">
