--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">.css{}</p></li>
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">JavaScript();</p></li>
           </ul>
-          <p><a href="#!" class="btn btn-primary">View More</a></p>
+          <p><a href="about.html#skills" class="btn btn-primary">View More</a></p>
         </div>
       </section>
     </div>
