Added a hover effect to the thumbnails on the project page

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       <section id="sills" class="col-md-12">
         <div class="p-3 mt-3 border border-primary rounded section-color">
           <h2>What I Can Do</h2>
-          <ul class="d-flex flex-row flex-wrap">
+          <ul class="d-flex flex-row flex-wrap justify-content-between">
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">&lthtml /&gt</p></li>
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">.css{}</p></li>
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">JavaScript();</p></li>
@@ -60,8 +60,12 @@
   </div>
 
   <!-- FOOTER -->
-  <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
-    <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
+  <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-around">
+          <p><i class="fa fa-copyright" aria-hidden="true"></i>Kloe Rogers</p>
+    <div class="d-flex justify-content-between">
+      <p class="pt-2 pr-2">kloerogers2015@gmail.com</p>
+      <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+    </div>
   </footer>
 </body>
 </html>
