--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,8 @@
 
   <div class="container">
     <div class="row">
+
+
       <!-- CONTACT FORM -->
       <section class="col-md-12">
         <div class="p-3 mt-3 border border-primary rounded container section-color">
@@ -60,29 +62,15 @@
               })(document, 'script');</script>
             </div>
           </section>
-      <!-- CONTACT INFO -->
-      <section class="col-md-12">
-        <div class="p-3 mt-3 border border-primary rounded container section-color">
-          <h2>Contact Information</h2>
-          <!-- EMAIL -->
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <!-- <h3>Email</h3> -->
-                <p><span class="badge badge-dark"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></span> <span style="font-size: 18px">kloerogers2015@gmail.com</span></p>
-              </div>
-              <div class="col">
-                <!-- <h3>Social Media</h3> -->
-                <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-              </div>
-            </div>
-          </div>
         </div>
-    </div>
-  </div>
-  <!-- FOOTER -->
-  <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
-    <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
-  </footer>
+      </div>
+      <!-- FOOTER -->
+      <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-around">
+              <p><i class="fa fa-copyright" aria-hidden="true"></i>Kloe Rogers</p>
+        <div class="d-flex justify-content-between">
+          <p class="pt-2 pr-2">kloerogers2015@gmail.com</p>
+          <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+        </div>
+      </footer>
 </body>
 </html>
