--- a/projects.html
+++ b/projects.html
@@ -40,24 +40,33 @@
           <div class="p-3 border border-primary rounded action-color">
             <div class="container">
               <div class="row">
-                <div id="gauntlet" class="col" style="cursor:pointer">
+                <div id="gauntlet" class="col">
                   <img class="img-fluid" src="./images/gauntlet-small_1.png" alt="">
                 </div>
-                <div id="rImageGallery" class="col" style="cursor:pointer">
+                <div id="rImageGallery" class="col">
                   <img class="img-fluid mt-3 w-100" src="./images/rollercoaster-small.png" alt="">
                 </div>
               </div>
             </div>
           </div>
+          <p class="pl-1 pt-1">Click to view a project</p>
         </div>
+
+
+
+
         <div class="col-md-8">
           <div id="projectDetails" class="p-4 col border border-primary rounded w-100 section-color"></div>
       </div>
 
     </section>
     <!-- FOOTER -->
-    <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
-      <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
+    <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-around">
+            <p><i class="fa fa-copyright" aria-hidden="true"></i>Kloe Rogers</p>
+      <div class="d-flex justify-content-between">
+        <p class="pt-2 pr-2">kloerogers2015@gmail.com</p>
+        <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+      </div>
     </footer>
   </body>
 </html>
