--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section class="col-md-9">
         <div class="p-3 mt-3 border border-primary rounded section-color">
           <h2>What I Can Do</h2>
-          <ul class="d-flex flex-row flex-wrap">
+          <ul class="d-flex flex-row flex-wrap justify-content-around">
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">&lthtml /&gt</p></li>
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">.css{}</p></li>
             <li class="circle d-flex flex justify-content-center align-items-center"><p class="circle-text">JavaScript();</p></li>
@@ -67,7 +67,7 @@
           <!-- PROJECT 1 -->
           <div class="col p-5">
             <img src="./images/rollercoaster-small.png" alt="" class="img-fluid">
-            <h3>Responsive Image Gallery</h3>
+            <h3 class="pt-2">Responsive Image Gallery</h3>
             <p>A small image gallery utilizing CSS animations to isplay metadata about the image</p>
             <p><a id="linkToImageGallery" href="projects.html" class="btn btn-primary">View more about the project</a></p>
           </div>
@@ -75,7 +75,7 @@
           <!-- PROJECT 2 -->
           <div class="ml-3 col p-5">
             <img src="./images/gauntlet-small_1.png" alt="" class="img-fluid">
-            <h3>The Gauntlet</h3>
+            <h3 class="pt-2">The Gauntlet</h3>
             <p>One of my first projects when it comes to web development</p>
             <p><a id="linkToTheGauntlet" href="projects.html" class="btn btn-primary">View more about the project</a></p>
           </div>
@@ -85,8 +85,12 @@
     </div>
   </section>
   <!-- FOOTER -->
-  <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-center">
-    <p><i class="fa fa-copyright" aria-hidden="true"></i> Kloe Rogers</p>
+  <footer class="mt-4 navbar sticky-bottom bg-primary justify-content-around">
+          <p><i class="fa fa-copyright" aria-hidden="true"></i>Kloe Rogers</p>
+    <div class="d-flex justify-content-between">
+      <p class="pt-2 pr-2">kloerogers2015@gmail.com</p>
+      <a href="https://github.com/krogers78" class="badge badge-dark"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+    </div>
   </footer>
 </body>
 </html>
